--- a/environment.yml
+++ b/environment.yml
@@ -4,19 +4,7 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - python=3.8
-  - numpy
-  - scipy
+  - python=3.9
   - ipywidgets
-  - matplotlib
-  - pandas
-  - geopandas
-  - pip
-  - ipympl
-  - jupyter-book=0.10
-  - seaborn
-  - xarray
+  - jupyter-book
   - pygmt
-  - pip:
-    - rasterio
-    - shapely
